--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "joi": "^17.13.1",
     "json2csv": "^6.0.0-alpha.2",
     "moment": "^2.30.1",
     "mongoose": "^8.3.5",
