--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.0",
     "joi": "^17.13.1",
     "json2csv": "^6.0.0-alpha.2",
+    "method-override": "^3.0.0",
     "moment": "^2.30.1",
     "mongoose": "^8.3.5",
     "passport": "^0.7.0",
