--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "json2csv": "^6.0.0-alpha.2",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.3.5",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
