--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "html-pdf": "^3.0.1",
     "joi": "^17.13.1",
     "json2csv": "^6.0.0-alpha.2",
     "method-override": "^3.0.0",
@@ -30,6 +32,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "pdf-lib": "^1.17.1",
     "serverless-http": "^2.7.0"
   }
 }
