--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html-pdf": "^3.0.1",
     "joi": "^17.13.1",
     "json2csv": "^6.0.0-alpha.2",
+    "latest": "^0.2.0",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
     "mongodb": "^6.8.0",
@@ -33,6 +34,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "pdf-lib": "^1.17.1",
+    "puppeteer": "^23.1.0",
     "serverless-http": "^2.7.0"
   }
 }
