--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "html-pdf": "^3.0.1",
+    "google-auth-library": "^9.14.1",
+    "googleapis": "^144.0.0",
+    "html-pdf": "^1.5.0",
     "joi": "^17.13.1",
     "json2csv": "^6.0.0-alpha.2",
     "latest": "^0.2.0",
@@ -30,11 +32,13 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.3.5",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "pdf-lib": "^1.17.1",
     "puppeteer": "^23.1.0",
-    "serverless-http": "^2.7.0"
+    "serverless-http": "^2.7.0",
+    "xlsx": "^0.18.5"
   }
 }
