--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.3.5",
     "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
